04-cloud/exercises/03-exposing-services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "antoniogamarro.com"
    http:
      paths:
      - pathType: Prefix
        path: "/apple"
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - pathType: Prefix
        path: "/banana"
        backend:
          service:
            name: banana-service
            port:
              number: 5678
